-feature#0001350: Compare Cacti Data Source Info to current RRD File Info
-feature#0001406: Dynamically display field description for templates
-feature#0001408: Hide templated input fields
-feature#0001409: Add context sensitive page help linking to cacti dokuwiki
-feature#0001438: Allow for drag and drop reordering of graph template items
-feature: jQuery "TableDnd" used for cdef item sort (courtesy Browniebraun)
-feature: Default Script Server/Script Queries now accept host specific ping_retries, max_oids
-feature: Support for new variables |host_ping_retries| and |host_max_oids|
-feature: Support changing the "Reindex Method" of associated data queries
-feature: Manage all Host Availability Options in each Host Template, derive Host options from those
-feature: Add Server Time to page headers, pay respect to user specific date/timeformats
-feature: add_device.php uses a host template like feature#0001122
-feature: Allow the enabling and disabling of a Data Source from the Data Source Edit form
-feature: Rerun already associated SNMP Queries if any SNMP related field was changed during host edit
-feature: Add Data Source Type "COMPUTE" to data templates to fully support all rrdtool-1.2.x data source types
-feature: Plugin Architecture is now part of main Cacti code
-feature: api_plugin_db_table_create allows for multi-column indices and more than one key per table
-feature: Add Tab's to the Utilities View Tech Page
-feature: Add Process Status Information to the View Tech Page

0.8.7d
-bug#0001336: Allow to specify on_change handler for checkbox_group
-bug#0001338: When Using Web Basic Authentication HTML Bookmarks Do Not Work 
-bug#0001351: Deleting 1000 graphs along with their Data Sources crashes the Server
-bug#0001361: SNMP query: 'No more variables left in this MIB View' instead of value of input field 
-bug#0001374: ss_host_disk.php etc. error corrected when using SNMP V3 (index off by 1)
-bug#0001376: graph_items.php variable $id defined in wrong place